--- a/index.html
+++ b/index.html
@@ -1,66 +1,68 @@
-<?php
-/**
- * The main template file
- *
- * This is the most generic template file in a WordPress theme
- * and one of the two required files for a theme (the other being style.css).
- * It is used to display a page when nothing more specific matches a query.
- * E.g., it puts together the home page when no home.php file exists.
- *
- * @link https://developer.wordpress.org/themes/basics/template-hierarchy/
- *
- * @package WordPress
- * @subpackage Twenty_Sixteen
- * @since Twenty Sixteen 1.0
- */
+---
+layout: default
+---
+{% include series.liquid posts=paginator.posts %}
 
-get_header(); ?>
+{% unless paginator.posts %}
+	<header><h1 class="title">Nothing Found</h1></header>
+	<p>
+		It seems we can’t find what you’re looking for.
+		{% comment %} Perhaps searching can help. {% endcomment %}
+	</p>
+{% endunless %}
 
-	<div id="primary" class="content-area">
-		<main id="main" class="site-main" role="main">
+{% if paginator.total_pages > 1 %}
+	<nav class="pagination">
+		{% if paginator.page > 1 %}
+			<a rel="start" href="{{ site.baseurl }}/">1</a>
+		{% endif %}
 
-		<?php if ( have_posts() ) : ?>
+		{% if paginator.previous_page > 2 %}
+			<span>…</span>
+		{% endif %}
 
-			<?php if ( is_home() && ! is_front_page() ) : ?>
-				<header>
-					<h1 class="page-title screen-reader-text"><?php single_post_title(); ?></h1>
-				</header>
-			<?php endif; ?>
+		{% if paginator.previous_page > 1 %}
+			<a rel="prev" href="{{ site.baseurl }}{{ paginator.previous_page_path }}">{{ paginator.previous_page }}</a>
+		{% endif %}
 
-			<?php
-			// Start the loop.
-			while ( have_posts() ) :
-				the_post();
+		<strong>{{ paginator.page }}</strong>
 
-				/*
-				 * Include the Post-Format-specific template for the content.
-				 * If you want to override this in a child theme, then include a file
-				 * called content-___.php (where ___ is the Post Format name) and that
-				 * will be used instead.
-				 */
-				get_template_part( 'template-parts/content', get_post_format() );
+		{% if paginator.next_page %}
+			<a rel="next" href="{{ site.baseurl }}{{ paginator.next_page_path }}">{{ paginator.next_page }}</a>
 
-				// End the loop.
-			endwhile;
+			{% assign omitted = paginator.next_page | plus: 1 %}
+			{% if omitted < paginator.total_pages %}
+				<span>…</span>
+			{% endif %}
 
-			// Previous/next page navigation.
-			the_posts_pagination(
-				array(
-					'prev_text'          => __( 'Previous page', 'twentysixteen' ),
-					'next_text'          => __( 'Next page', 'twentysixteen' ),
-					'before_page_number' => '<span class="meta-nav screen-reader-text">' . __( 'Page', 'twentysixteen' ) . ' </span>',
-				)
-			);
+			{% if paginator.next_page < paginator.total_pages %}
+				<a href="{{ site.baseurl }}/page{{ paginator.total_pages }}">{{ paginator.total_pages }}</a>
+			{% endif %}
+		{% endif %}
 
-			// If no content, include the "No posts found" template.
-		else :
-			get_template_part( 'template-parts/content', 'none' );
+		{% if paginator.previous_page %}
+			<a class="prev" rel="prev" href="{{ site.baseurl }}{{ paginator.previous_page_path }}"></a>
+		{% else %}
+			<span class="prev"></span>
+		{% endif %}
 
-		endif;
-		?>
+		{% if paginator.next_page %}
+			<a class="next" rel="next" href="{{ site.baseurl }}{{ paginator.next_page_path }}"></a>
+		{% else %}
+			<span class="next"></span>
+		{% endif %}
+	</nav>
 
-		</main><!-- .site-main -->
-	</div><!-- .content-area -->
+	{% if paginator.page == 1 %}
+		<template id="loader">
+			<link rel="stylesheet" href="loader.css">
+			<button type="button" id="load">Older posts</button>
+		</template>
+		<script>const pages = {{ paginator.total_pages }}</script>
+		<script async src="loader.js"></script>
+	{% endif %}
+{% endif %}
 
-<?php get_sidebar(); ?>
-<?php get_footer(); ?>
+{% comment %}
+vim: filetype=liquid
+{% endcomment %}
